# tenorpicker

./: .gitignore  README.md  package.json
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  main.rs  tenor.rs  window_watcher.rs
